# pico-lib

./: CMakeLists.txt  main.cpp
lib/: gpio.h  serial.cpp  serial.h
